updating models, updating services
some pages not working because of model updates

--- a/client-angular/src/app/home/stock-shares/stock-shares.component.html
+++ b/client-angular/src/app/home/stock-shares/stock-shares.component.html
@@ -1,10 +1,10 @@
 <p>Current shares for {{symbol}} of list {{listName}}</p>
 <div class="shares-container">
     <ul class="shares-list">
-        <li class="share-item" *ngFor="let share of shares">
+        <!-- <li class="share-item" *ngFor="let share of shares">
             <span class="share-amount">Amount: {{share.amount}}</span>
             <span class="share-price">Avg Price: {{share.averagePrice}}</span>
-        </li>
+        </li> -->
     </ul>
     <button (click)="AddShare()">Add</button>
 </div>
