--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="chart-container">
         <h3>Stock Portfolio</h3>
-        <p><strong>Total Gain:</strong> {{GetTotalGain()}}$</p>
+        <p><strong>Total Gain:</strong> $</p>
         <p><strong>Number of Stocks:</strong> {{CountOwnedStocks()}}</p>
     </div>
     <div class="chart-container">
