updating stocks table component
returning the notes, adding last update time.

--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -1,8 +1,8 @@
-<div class="stock-list-container" *ngFor="let listName of GetKeys(this.User.watchingStocksByListName)">
+<div class="stock-list-container" *ngFor="let listName of GetKeys(this.User?.watchingStocksByListName)">
   <h2>{{listName}}</h2>
   <app-stocks-table 
     [listName]="listName"
-    [stockSymbols]="this.User.watchingStocksByListName[listName]"
-    [stocksDictionary]="this.User">
+    [watchingStocks]="this.User.watchingStocksByListName[listName]"
+    [stocksDictionary]="this.Stocks">
   </app-stocks-table>
 </div>
