--- a/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
@@ -7,31 +7,33 @@
       <th>Prediction (1 year)</th>
       <th>Shares</th>
       <th>Note</th>
+      <th>Last Update</th>
     </tr>
   </thead>
   <tbody id="stockList">
-    <tr class="stock-card" *ngFor="let symbol of GetKeys(stocks)">
+    <tr class="stock-card" *ngFor="let symbol of GetKeys(watchingStocks)">
       <td>
         <a 
         [routerLink]="['/', 'stocks', 'information']" 
         [queryParams]="{ stockSymbol: symbol }">
-          {{stocks[symbol].name}}
+          {{stocksDictionary[symbol].name}}
         </a>
       </td>
       <td>{{symbol}}</td>
-      <td>{{stocks[symbol].price}}</td>
-      <td></td>
+      <td>{{stocksDictionary[symbol].price}}</td>
+      <td>{{stocksDictionary[symbol].stockAnalysis?.targetMeanPrice}}</td>
       <td>
-        <!-- <p (click)="RedirectToSharesScreen(symbol)">{{CountShares(stocks[symbol].shares)}}</p> -->
+        <p (click)="RedirectToSharesScreen(symbol)">{{CountShares(watchingStocks[symbol])}}</p>
       </td>
       <td>
-        <!-- <ng-container *ngIf="!stocks.find(stock => stock.symbol == symbol).note; else elseTemplate">
+        <ng-container *ngIf="!watchingStocks[symbol].note; else elseTemplate">
           <button (click)="CreateStockNote(symbol)">+</button>
         </ng-container>
         <ng-template #elseTemplate>
-          <p (click)="DeleteNote(symbol)">{{stocks[symbol].note}}</p>
-        </ng-template> -->
+          <p (click)="DeleteNote(symbol)">{{watchingStocks[symbol].note}}</p>
+        </ng-template>
       </td>
+      <td>{{stocksDictionary[symbol].updatedTime}}</td>
     </tr>
   </tbody>
 </table>
