--- a/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
@@ -13,7 +13,7 @@
   <tbody id="stockList">
     <tr class="stock-card" *ngFor="let symbol of GetKeys(watchingStocks)">
       <td>
-        <a 
+        <a
         [routerLink]="['/', 'stocks', 'information']" 
         [queryParams]="{ stockSymbol: symbol }">
           {{stocksDictionary[symbol].name}}
@@ -21,7 +21,7 @@
       </td>
       <td>{{symbol}}</td>
       <td>{{stocksDictionary[symbol].price}}</td>
-      <td>{{stocksDictionary[symbol].stockAnalysis?.targetMeanPrice}}</td>
+      <td>{{stocksDictionary[symbol].analysis?.targetMeanPrice}}</td>
       <td>
         <p (click)="RedirectToSharesScreen(symbol)">{{CountShares(watchingStocks[symbol])}}</p>
       </td>
