fixing stock pi chart not showing
adding behavior subject

--- a/client-angular/src/app/home/user-information/user-information.component.html
+++ b/client-angular/src/app/home/user-information/user-information.component.html
@@ -3,8 +3,8 @@
     <br>
     <div class="chart-container">
         <h3>General Information</h3>
-        <p><strong>Name:</strong> {{user?.firstName}} {{user?.lastName}}</p>
-        <p><strong>Email:</strong> {{user?.email}}</p>
+        <p><strong>Name:</strong> {{(user|async)?.firstName}} {{(user|async)?.lastName}}</p>
+        <p><strong>Email:</strong> {{(user|async)?.email}}</p>
     </div>
     <div class="chart-container">
         <h3>Stock Portfolio</h3>
