updating all axios calls to observers with http client
also adding pipes to http response to check if the response status code is 200

--- a/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-table/stocks-table.component.html
@@ -10,7 +10,7 @@
       <th>Last Update</th>
     </tr>
   </thead>
-  <tbody id="stockList">
+  <tbody id="stockList" *ngIf="GetKeys(stocksDictionary).length > 0">
     <tr class="stock-card" *ngFor="let symbol of GetKeys(watchingStocks)">
       <td>
         <a
