--- a/client-angular/src/app/components/header/header.component.html
+++ b/client-angular/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
         <div class="nav-links">
             <a routerLink="">Home</a>
             <a routerLink="/stocks/search">Search</a>
+            <a routerLink="/stocks/all">Stocks</a>
             <ng-container *ngIf="IsConnected(); else elseTemplate">
                 <a routerLink="/user/stocks">My Stocks</a>
                 <a routerLink="/user/information">User Information</a>
@@ -12,6 +13,7 @@
             <ng-template #elseTemplate>
                 <a routerLink="/login">Login</a>
             </ng-template>
+            <span>{{notifications?.length}}</span>
         </div>
     </nav>
 </header>
