changing the user service to return a subject as observable

--- a/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
+++ b/client-angular/src/app/home/stocks-viewer/stocks-viewer.component.html
@@ -1,10 +1,10 @@
 <div><button (click)="AddUserList()">Add List</button></div>
 <div><button (click)="RemoveUserList()">Remove List</button></div>
-<div class="stock-list-container" *ngFor="let listName of GetKeys(this.User?.watchingStocksByListName)">
+<div class="stock-list-container" *ngFor="let listName of GetKeys(this.user?.watchingStocksByListName)">
   <h2>{{listName}}<button (click)="AddListStock(listName)">AddStock</button></h2>
   <app-stocks-table 
     [listName]="listName"
-    [watchingStocks]="this.User.watchingStocksByListName[listName]"
-    [stocksDictionary]="this.Stocks">
+    [watchingStocks]="this.user.watchingStocksByListName[listName]"
+    [stocksDictionary]="this.stocks">
   </app-stocks-table>
 </div>
