--- a/client-angular/src/app/components/filter-pagination-table/filter-pagination-table.component.html
+++ b/client-angular/src/app/components/filter-pagination-table/filter-pagination-table.component.html
@@ -2,52 +2,35 @@
     <table class="styled-table">
         <thead>
             <tr>
-                <td>
-                    name
-                    <button class="filter-icon" (click)="FilterStocksByField('name')">
-                        <ng-container *ngIf="IsFilterUsed('name'); else elseTemplate">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
+                <td>index</td>
+                <td *ngFor="let header of headerConfiguration.headerConfigurations">
+                    {{header.headerName}}
+                    <button *ngIf="header.isFilterAllowed" class="filter-icon"
+                        (click)="FilterItemsByField(header.headerName)">
+                        <ng-container *ngIf="IsFilterUsed(header.headerName); else elseTemplate">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-funnel-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5z" />
                             </svg>
                         </ng-container>
                         <ng-template #elseTemplate>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-funnel" viewBox="0 0 16 16">
                                 <path
                                     d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z" />
                             </svg>
                         </ng-template>
                     </button>
                 </td>
-                <td>
-                    symbol
-                    <button class="filter-icon" (click)="FilterStocksByField('symbol')">
-                        <ng-container *ngIf="IsFilterUsed('symbol'); else elseTemplate">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5z" />
-                            </svg>
-                        </ng-container>
-                        <ng-template #elseTemplate>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                height="16" fill="currentColor" class="bi bi-funnel" viewBox="0 0 16 16">
-                                <path
-                                    d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z" />
-                            </svg>
-                        </ng-template>
-                    </button>
-                </td>
-                <td>price</td>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let stock of GetCurrentStocks()">
-                <td>{{stock.name}}</td>
-                <td>{{stock.symbol}}</td>
-                <td>{{stock.price}}</td>
+            <tr *ngFor="let stock of GetCurrentStocks(), let i = index">
+                <td>{{i+1 + startingIndex}}</td>
+                <td *ngFor="let header of headerConfiguration.headerConfigurations">
+                    {{GetItemField(stock, header.headerName)}}
+                </td>
             </tr>
         </tbody>
     </table>
@@ -59,7 +42,7 @@
                     d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
             </svg>
         </button>
-        <span class="page-info">Page {{GetCurrentPage()}} of {{GetNumberOfPage()}}</span>
+        <span class="page-info">Page {{GetCurrentPage()}} of {{GetNumberOfPages()}}</span>
         <button class="page-btn" (click)="NextPage()">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-chevron-right" viewBox="0 0 16 16">
