--- a/client-angular/src/app/components/footer/footer.component.html
+++ b/client-angular/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer>
-    <p>&copy; 2023 Stock Collection App. All rights reserved.</p>
+    <p>&copy; 2024 Stock Collection App. All rights reserved.</p>
+    <p>{{isConnected ? 'connected' : 'not connected'}}</p>
 </footer>
