--- a/client-angular/src/app/components/header/header.component.html
+++ b/client-angular/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
             <li><a routerLink="" class="link">Home</a></li>
             <li><a routerLink="/stocks/search" class="link">Search</a></li>
             <li><a routerLink="/stocks/all" class="link">Stocks</a></li>
+            <li><a routerLink="/marketTrends" class="link">Market Trends</a></li>
 
             <ng-container *ngIf="IsConnected(); else elseTemplate">
                 <li class="dropdown">
