--- a/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
+++ b/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
@@ -1,2 +1,2 @@
-<app-filter-pagination-table [Items]="stocks" [HeaderConfiguration]="stocksTableHeaderConfiguration">
+<app-filter-pagination-table [Data]="stocks" [ColDefs]="stocksColumnDefinitions">
 </app-filter-pagination-table>
