--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.html
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let marketTrend of marketTrends | async">
     <p>{{GenerateMarketTrendName(marketTrend.trendName)}}</p>
-    <app-filter-pagination-table [HeaderConfiguration]="stockNewsHeaderConfiguration" 
-        [Items]="marketTrend.stockNews"></app-filter-pagination-table>
-    <app-filter-pagination-table [HeaderConfiguration]="trendingStockHeaderConfiguration"
-        [Items]="marketTrend.trendingStocks"></app-filter-pagination-table>
+    <app-filter-pagination-table [ColDefs]="stockNewsColumnDefinitions" 
+        [Data]="marketTrend.stockNews"></app-filter-pagination-table>
+    <app-filter-pagination-table [ColDefs]="trendingStockColumnDefinitions"
+        [Data]="marketTrend.trendingStocks"></app-filter-pagination-table>
 </div>
