--- a/client-angular/src/app/home/home.component.css
+++ b/client-angular/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .hero {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     height: 80vh;
     text-align: center;
@@ -9,13 +9,13 @@
 }
 
 .hero h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: #0077b6;
+    font-size: 4rem;
+    margin-bottom: 4rem;
+    color: black;
 }
 
 .hero p {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     margin-bottom: 2rem;
     max-width: 600px;
 }
