adding primeng header and toast

--- a/client-angular/src/app/components/header/header.component.css
+++ b/client-angular/src/app/components/header/header.component.css
@@ -1,4 +1,4 @@
-header {
+/* header {
     background-color: #ffffff;
     padding: 1rem 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -103,3 +103,7 @@ header {
     height: 15px;
     cursor: pointer;
 }
+
+
+ */
+
