--- a/client-angular/src/app/components/header/header.component.html
+++ b/client-angular/src/app/components/header/header.component.html
@@ -1,25 +1,1 @@
-<header>
-    <nav>
-        <ul class="nav-links">
-            <li><a routerLink="" class="link">Home</a></li>
-            <li><a routerLink="/stocks/search" class="link">Search</a></li>
-            <li><a routerLink="/stocks/all" class="link">Stocks</a></li>
-            <li><a routerLink="/marketTrends" class="link">Market Trends</a></li>
-
-            <ng-container *ngIf="IsConnected(); else elseTemplate">
-                <li class="dropdown">
-                    <a>User</a>
-                    <div class="dropdown-content">
-                        <a routerLink="/user/information" class="dropdown-item link">Information</a>
-                        <a routerLink="/user/stocks" class="dropdown-item link">My Stocks</a>
-                        <a routerLink="/" (click)="SignOut()" class="dropdown-item link">Sign Out</a>
-                    </div>
-                    <span class="notification-badge" (click)="NavigateNotifications()">{{notifications?.length}}</span>
-                </li>
-            </ng-container>
-            <ng-template #elseTemplate>
-                <li><a routerLink="/login">Login</a></li>
-            </ng-template>
-        </ul>
-    </nav>
-</header>
+<p-menubar [model]="items"></p-menubar>
