fixing error with component naming, updating server url in development and production environments

--- a/client-angular/src/app/partial-views/user-stocks/user-stocks.component.html
+++ b/client-angular/src/app/partial-views/user-stocks/user-stocks.component.html
@@ -4,7 +4,6 @@
 </div>
 <div class="stock-list-container" *ngFor="let listName of GetKeys(this.user?.watchingStocksByListName)">
     <h2>{{listName}}<button (click)="AddListStock(listName)">AddStock</button></h2>
-    <app-stocks-table [listName]="listName" [watchingStocks]="this.user.watchingStocksByListName[listName]"
-        [stocksDictionary]="this.stocks">
-    </app-stocks-table>
+    <app-portfolio-details [listName]="listName" [watchingStocks]="this.user.watchingStocksByListName[listName]"
+    [stocksDictionary]="this.stocks"></app-portfolio-details>
 </div>
