--- a/client-angular/src/app/partial-views/user-stocks/user-stocks.component.html
+++ b/client-angular/src/app/partial-views/user-stocks/user-stocks.component.html
@@ -1,9 +1,24 @@
-<div>
-    <button (click)="AddUserList()">Add List</button>
-    <button (click)="RemoveUserList()">Remove List</button>
-</div>
-<div class="stock-list-container" *ngFor="let listName of GetKeys(this.user?.watchingStocksByListName)">
-    <h2>{{listName}}<button (click)="AddListStock(listName)">AddStock</button></h2>
-    <app-portfolio-details [listName]="listName" [watchingStocks]="this.user.watchingStocksByListName[listName]"
-    [stocksDictionary]="this.stocks"></app-portfolio-details>
+<div class="grid-container">
+    <div class="sidebar">
+        <p-panel header="Portfolios">
+            <button (click)="AddUserList()">Add List</button>
+            <button (click)="RemoveUserList()">Remove List</button>
+            <p-listbox 
+                [options]="listNames" 
+                [(ngModel)]="selectedPortfolioName"
+                (onClick)="onSelectedPortfolio($event)"/>
+        </p-panel>
+    </div>
+    <div class="content">
+        <p-panel header="Portfolio Details">
+            <app-portfolio-details
+                *ngIf="selectedPortfolioName != undefined && selectedPortfolio != undefined; else noSelection"
+                [listName]="selectedPortfolioName" [watchingStocks]="selectedPortfolio"
+                [stocksDictionary]="this.stocks">
+            </app-portfolio-details>
+            <ng-template #noSelection>
+                <p>Please choose an item</p>
+            </ng-template>
+        </p-panel>
+    </div>
 </div>
