adding p-table for portfolio details component

--- a/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.css
+++ b/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.css
@@ -1,4 +1,4 @@
-table {
+/* table {
     width: 100%;
     max-width: 800px;
     border-collapse: collapse;
@@ -84,4 +84,4 @@ td a{
         position: static;
         width: 100%;
     }
-}
+} */
