--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.css
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.css
@@ -5,9 +5,9 @@
 }
 
 .sidebar {
-    padding: 1rem;
+    padding: 1rem 0 1rem 1rem;  
 }
 
 .content {
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 0;  
 }
