fixing some css

--- a/client-angular/src/app/partial-views/user-stocks/user-stocks.component.css
+++ b/client-angular/src/app/partial-views/user-stocks/user-stocks.component.css
@@ -11,3 +11,10 @@
 .content {
     padding: 1rem 1rem 1rem 0;
 }
+
+.button-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 1rem;
+}
