--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.html
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.html
@@ -16,42 +16,44 @@
             <p *ngIf="selectedMarketTrend == undefined">
                 Please choose a market trend
             </p>
-            <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.stockNews">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="articleTitle">
-                            Title <p-sortIcon field="articleTitle" />
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-stockNews>
-                    <tr>
-                        <td>{{stockNews.articleTitle}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-            <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.trendingStocks">
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th pSortableColumn="symbol">
-                            Symbol <p-sortIcon field="symbol" />
-                        </th>
-                        <th pSortableColumn="name">
-                            Name <p-sortIcon field="name" />
-                        </th>
-                        <th pSortableColumn="price">
-                            Price <p-sortIcon field="price" />
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-trendingStock>
-                    <tr>
-                        <td>{{trendingStock.symbol}}</td>
-                        <td>{{trendingStock.name}}</td>
-                        <td>{{trendingStock.price}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
+            <div class="flex-container flex-column gap-2">
+                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.stockNews">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th pSortableColumn="articleTitle">
+                                Title <p-sortIcon field="articleTitle" />
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-stockNews>
+                        <tr>
+                            <td>{{stockNews.articleTitle}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.trendingStocks">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th pSortableColumn="symbol">
+                                Symbol <p-sortIcon field="symbol" />
+                            </th>
+                            <th pSortableColumn="name">
+                                Name <p-sortIcon field="name" />
+                            </th>
+                            <th pSortableColumn="price">
+                                Price <p-sortIcon field="price" />
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-trendingStock>
+                        <tr>
+                            <td>{{trendingStock.symbol}}</td>
+                            <td>{{trendingStock.name}}</td>
+                            <td>{{trendingStock.price}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
         </p-panel>
     </div>
 </div>
