--- a/client-angular/src/styles.css
+++ b/client-angular/src/styles.css
@@ -1,6 +1,7 @@
 @import "primeng/resources/themes/bootstrap4-light-blue/theme.css";
 @import "assets/styles/header-styling.css";
 @import "assets/styles/table-styling.css";
+@import "assets/styles/global-styling.css";
 
 body {
     font-family: 'Poppins', sans-serif;
